@@ -1,3 +1,6 @@
+2025-04-20 Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Define MAGIC constants added since Linux 4.9 (closes: #192)
+
 2025-04-05 Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Fix build with additional libraries on non-Linux systems
 	* Update NEWS file and aide.conf.5 man page
